--- a/base/templates/tools/heritability_calculator_res.html
+++ b/base/templates/tools/heritability_calculator_res.html
@@ -47,6 +47,7 @@
 	<br />
 </div>
 <div id="containerfluid">
+	<div ><button id="ppg" onClick='ppage()'>Previous</button><button id="npg" onClick='npage()'>Next</button></div>
 	<div id="svgchartarea"></div>
 	<canvas id="canvas" ></canvas> <!-- width="900" height="400"></canvas -->
 	<div id="png-container"></div>
@@ -97,6 +98,64 @@ var imag
 var chartJson = JSON.parse({{ cdt|tojson|safe }});
 var traits =[];
 var img, ctx, canvs;
+var maxP = 1;
+var minP = 1;
+var curP = 1;
+var strn = [];
+
+var sortByProperty = function(property){
+   return function(a,b){
+      if(a[property] > b[property])
+         return 1;
+      else if(a[property] < b[property])
+         return -1;
+
+      return 0;
+   }
+}
+
+var ppage = function(){
+	curP= (curP===1)? 1:curP-1;
+	loadPlot(curP);
+}
+
+var npage = function(){
+	curP= (curP===maxP)?maxP:curP+1;
+	loadPlot(curP);
+}
+
+function range(start, end){
+	if (start===end){return ([start,]);}
+	if (start<end){return ([start, ...range(start + 1, end)]);}
+	if (end<start){return ([start, ...range(start - 1, end)]);}
+}
+
+function getRandomColor() {
+	var letters = '123456789ABCDEF'.split('');
+	var color = '#';
+	for (var i = 0; i < 6; i++ ) { 
+	        color += letters[Math.round(Math.random() * 14)];
+	}
+	return color;
+}
+
+var cpal = []
+var loadPlot = function(jj){
+	df = [];
+	//console.log(jj);
+	//console.log(range(25*jj, 25*(jj+1)));
+	//console.log([strn.indexOf(d['s']), range(25*(jj), (25*(jj+1)-1))]);
+	ran = range(25*(jj-1), (25*(jj)-1));
+	chartJson.forEach(function(d,i){if (ran.indexOf((strn.indexOf(d['s'])))>-1){df.push(d);}});
+	UniqueNames= $.unique(chartJson.map(function (d) {return d.a;}));
+	if (cpal.length == 0){
+	    for (var cc=0; cc<UniqueNames.length; cc++){cpal.push(getRandomColor())};
+	}
+	//console.log(df.length);
+	var chart = d3.exploding_boxplot(df, {y:'v',group:'s',color:'a',label:'t', pal:cpal})
+	document.getElementById("svgchartarea").innerHTML = "";
+	chart('#svgchartarea')
+}
 
 async function drawImg(canvas, image, DOMURL, w, h){
 
@@ -195,11 +254,13 @@ $(document).ready(function(){
 		// color : color of the point / boxplot AssayNumber
 		// label : displayed text in toolbox AssayNumber_Strain_Replicate : Value
 	
-		var chart = d3.exploding_boxplot(chartJson,
-            {y:'v',group:'s',color:'a',label:'t'})
+		chartJson.sort(sortByProperty("s"));
+		chartJson.forEach(function(d,i){chartJson[i]["v"] = parseFloat(d["v"]); if (strn.indexOf(d['s'])==-1){strn.push(d['s']);}});
+		maxP = ((strn.length % 25) > 0) ? parseInt(strn.length / 25)+1 : parseInt(strn.length / 25);
 
 		//call chart on a div
-		chart('#svgchartarea')
+		//chart('#svgchartarea')
+		loadPlot(1);
 
 	}else{
 		newPt.appendChild(document.createTextNode("Chart data is empty!"));
